# clipwhisper

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: dependabot.yaml
.github/workflows/: check.yaml
src/: args.rs  lib.rs  main.rs
