[package]
name = "clipwhisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.6"
anyhow = "1.0.80"
clap = { version = "4.5.1", features = [ "derive" , "unstable-styles" ]}
dotenvy = "0.15.7"
env_logger = "0.11.2"
interpolator = "0.5.0"
log = "0.4.21"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
